--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,6 +42,63 @@
     12.Version Light
 
 -------------------------------------------------------------*/
+.text-container {
+    position: relative;
+    width: 200%;
+    display: inline-block;
+  }
+  
+  .text-container h2 {
+    position: relative;
+    z-index: 4;
+    transition: color 0.3s ease;
+  }
+  
+  .text-container:hover h2 {
+    color: transparent;
+  }
+  
+  .text-container .hidden-image {
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+  }
+  
+  .text-container:hover .hidden-image {
+    opacity: 1;
+  }
+custom-image-wrapper {
+  position: relative;
+  
+}
+
+.custom-image-wrapper img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%; /* Adjust the width of the image as needed */
+  height: auto; /* Maintain the aspect ratio of the image */
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+
+.image1 {
+  /* Add custom styles for Image 1 if needed */
+}
+
+.image2 {
+  /* Add custom styles for Image 2 if needed */
+}
+
+.text-container:hover .hidden-image {
+  opacity: 1;
+}
+
+.text-container:hover .hidden-image {
+  opacity: 1;
+}
 
 :root,
  :root .v-light {
@@ -105,6 +162,7 @@
     --body-style-space: 100px;
     --smooth-width: 4px;
 }
+
 
 
 /* -------------------------------------------------------
