assets/css/style:

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,7 +62,7 @@
     color: transparent;
   }
   
-  .text-container .hidden-image {
+  .hidden-image {
     position: absolute;
     top: 0;
     left: 0;
