--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,9 +44,9 @@
 -------------------------------------------------------------*/
 .text-container {
    
-    width: 100%;
+    width: 200%;
     display: inline-block;
-    position:relative;
+    position: top;
     z-index: 1;
     top: 0;
     left:0;
