--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -98,7 +98,7 @@
  :root .v-light {
     --bg-color: #f9f9f9;
     --assistant-color: #e6e6e6;
-    --theme-color: #fcc4d7;
+    --theme-color: #fab010;
     --font-color: #0009;
     --heading-color: #000;
     --border-color: #bebebe;
@@ -111,7 +111,7 @@
  :root .v-dark-head {
     --bg-color: #000;
     --assistant-color: #101010;
-    --theme-color: #fcc4d7;
+    --theme-color: #fab010;
     --font-color: #bbb;
     --heading-color: #fff;
     --border-color: rgba(255, 255, 255, 0.07);
@@ -124,7 +124,7 @@
     .v-dark-head-mobile {
         --bg-color: #000;
         --assistant-color: #101010;
-        --theme-color: #fcc4d7;
+        --theme-color: #fab010;
         --font-color: #bbb;
         --heading-color: #fff;
         --border-color: rgba(255, 255, 255, 0.07);
